--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,20 @@
 
     <application
         android:allowBackup="true"
-        android:name=".ID.CharacterApplication"
+        android:name=".di.CharacterApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".viewCharacters">
+        <activity android:name=".ui.showCharacters.viewCharacters">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MVPshowCharacter.viewImagesCharacter"></activity>
+        <activity android:name=".ui.showUniqueCharacter.viewImagesCharacter"></activity>
     </application>
 
 </manifest>
